force-app/main/default/objects/Gong__Related_Account__c/Gong__Related_Account__c.object-meta.xml
<CustomObject>
    <description>A junction object that associated a call and an account.</description>
    <label>Gong Related Accounts</label>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>