force-app/main/default/objects/Gong__Related_Account__c/fields/Gong__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Gong__Account_Name__c</fullName>
    <formula>HYPERLINK( Gong__Related_Entity_ID__r.Id , Gong__Related_Entity_ID__r.Name ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>