force-app/main/default/objects/Gong__Related_Account__c/fields/Gong__Participants_Emails__c.field-meta.xml
<CustomField>
    <fullName>Gong__Participants_Emails__c</fullName>
    <formula>Gong__Gong_Interaction__r.Gong__Participants_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participants Emails</label>
    <type>Text</type>
</CustomField>